# EigenDocChinese

./: .gitignore  README.md
1.Document/: EigenDocChinese.md
1.EigenDocChinese/: EigenDocChinese.md
2.EigenDocEnglish/: index.html
3.Code/2.Getting-started/: 1.A-simple-first-program.cpp  2.Matrices-and-vectors-2.cpp  2.Matrices-and-vectors.cpp  3.Matrices-and-vectors.cpp  CMakeLists.txt
3.Code/3.Chapters/1.Dense-matrix-and-array-manipulation/5.Slicing-and-Indexing/: 1.Basic-slicing.cpp  Basic-slicing.cpp  CMakeLists.txt
3.Code/3.Chapters/1.Dense-matrix-and-array-manipulation/7.Reductions-visitors-broadcasting/: 1.reduction.cpp  2.norm.cpp  3.bool_reduction.cpp  4.visitors.cpp  5.partial_reduction.cpp  6.broadcasting.cpp  7.broadcasting_app.cpp  CMakeLists.txt
3.Code/3.Chapters/1.Dense-matrix-and-array-manipulation/8.Reshape/: CMakeLists.txt  reshape.cpp  reshapeInPlace.cpp
3.Code/3.Dense-matrix-and-array-manipulation/1.The-Matrix-class/: 1.Coefficient-accessors.cpp  2.Resizing.cpp  CMakeLists.txt
3.Code/3.Dense-matrix-and-array-manipulation/10.Interfacing-with-raw-buffers-the-Map-class/: 1.map-variables.cpp  2.using-map-variables.cpp  3.change-mapped-array.cpp  CMakeLists.txt
3.Code/3.Dense-matrix-and-array-manipulation/11.Aliasing/: 1.examples.cpp  2.Resolving-assertion.cpp  2.assertion.cpp  3.Aliasing-component-wise.cpp  4.Aliasing-matrix-multiplication.cpp  CMakeLists.txt
3.Code/3.Dense-matrix-and-array-manipulation/12.Storage-orders/: 1.Column-major-row-major.cpp  CMakeLists.txt
3.Code/3.Dense-matrix-and-array-manipulation/2.Matrix-and-vector-arithmetic/: 1.Addition-subtraction.cpp  2.Scalar-multiplication-division.cpp  3.Transposition-conjugation.cpp  4.Multiplication.cpp  5.Dot-product-cross-product.cpp  6.Basic-arithmetic-reduction.cpp  CMakeLists.txt
3.Code/3.Dense-matrix-and-array-manipulation/3.Array-class-and-coefficient-wise-operations/: 1.Accessing-values.cpp  2.Addition-subtraction.cpp  3.Array-multiplication.cpp  4.Other-coefficient-wise-operations.cpp  5.Converting-mat-to-arr.cpp  6.Converting-arr-to-mat.cpp  CMakeLists.txt
3.Code/3.Dense-matrix-and-array-manipulation/4.Block-operations/: 1.Using-block-operations.cpp  2.Columns-rows.cpp  3.Corner-related-operations.cpp  4.Block-operations-for-vectors.cpp  CMakeLists.txt
3.Code/3.Dense-matrix-and-array-manipulation/5.Slicing-and-Indexing/: 1.Basic-slicing.cpp  2.Array-of-indices.cpp  3.Custom-index-list.cpp  CMakeLists.txt
3.Code/3.Dense-matrix-and-array-manipulation/6.Advanced-initialization/: 1.Comma-initializer.cpp  2.Special-matrices-arrays.cpp  3.Temporary-objects.cpp  CMakeLists.txt
3.Code/3.Dense-matrix-and-array-manipulation/7.Reductions-visitors-broadcasting/: 1.reduction.cpp  2.norm.cpp  3.bool_reduction.cpp  4.visitors.cpp  5.partial_reduction.cpp  6.broadcasting.cpp  7.broadcasting_app.cpp  CMakeLists.txt
3.Code/3.Dense-matrix-and-array-manipulation/8.Reshape/: 1.reshape.cpp  2.reshapeInPlace.cpp  CMakeLists.txt
3.Code/3.Dense-matrix-and-array-manipulation/9.STL-iterators-and-algorithms/: 1.stl.cpp  CMakeLists.txt
3.Code/4.Dense-linear-problems-and-decompositions/1.Linear-algebra-decompositions/: 1.Basic-linear-colPivHouseholderQr.cpp  2.Basic-linear-ldlt.cpp  3.Least-squares.cpp  4.Checking-matrix-singular.cpp  5.Eigenvalues-eigenvectors.cpp  6.Inverse-determinant.cpp  7.Separating-computation-construction.cpp  8.Rank-revealing.cpp  CMakeLists.txt
3.Code/5.Sparse-linear-algebra/1.Sparse-matrix-manipulations/: 1.First-example.cpp  1.First-example.h  2.SparseMatrix.cpp  3.Operators-functions.cpp  CMakeLists.txt
